@@ -9,6 +9,7 @@ repositories {
 dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
     testImplementation 'org.testng:testng:7.7.0'
 }
 
@@ -39,10 +40,18 @@ build.dependsOn(copyToLib)
 // This is specifically for JEP 406, "Enhanced Switch"
 tasks.withType(JavaCompile) {
     options.compilerArgs += "--enable-preview"
+    options.compilerArgs += "--add-modules"
+    options.compilerArgs += "java.annotation"
+    options.compilerArgs += "--patch-module"
+    options.compilerArgs += "java.annotation=jsr305-3.0.2.jar"
 }
 tasks.withType(Test) {
     jvmArgs += "--enable-preview"
 }
 tasks.withType(JavaExec) {
     jvmArgs += "--enable-preview"
+    jvmArgs += "--add-modules"
+    jvmArgs += "java.annotation"
+    jvmArgs += "--patch-module"
+    jvmArgs += "java.annotation=jsr305-3.0.2.jar"
 }
